<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_name_pos"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:textStyle="bold"
        style="@style/font_name_pos_red"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:text="@string/pos_8"
        android:textStyle="bold"
        style="@style/font_name_pos_red"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:text="@string/pos_7"
        style="@style/font_name_pos_black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos_3x"
        android:text="@string/pos_6"
        style="@style/font_name_pos_black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:text="@string/pos_5"
        style="@style/font_name_pos_black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos_7x"
        android:text="@string/pos_4"
        style="@style/font_name_pos_black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos_2x"
        android:text="@string/pos_3"
        style="@style/font_name_pos_black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:text="@string/pos_2"
        style="@style/font_name_pos_black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:text="@string/pos_1"
        style="@style/font_name_pos_red"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_name_pos"
        android:text="@string/pos_db"
        style="@style/font_name_pos_red"
        />


</LinearLayout>