<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rdoGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:checkedButton="@+id/rdoAll"
        >

        <RadioButton
            android:id="@+id/rdoAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginLeft="8dp"
            />

        <RadioButton
            android:id="@+id/rdoTowNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_tow"
            android:layout_marginLeft="8dp"
            />

        <RadioButton
            android:id="@+id/rdoThreeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_three"
            android:layout_marginLeft="8dp"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>