<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/material"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/title_sc"
        android:background="@color/purple_700"
        android:id="@+id/txtTitle"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn_item"
        android:padding="12dp"
        android:elevation="8dp"
        android:text="@string/message_find_"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        />

    <TextView
        android:id="@+id/txtTry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn_item"
        android:elevation="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:text="@string/try_gen"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        />

    <TextView
        android:id="@+id/tvGenTypeOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_gen_type1"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/get_value_one"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tvGenTypeVip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvGenTypeVip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_gen_type2"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/get_value_vip"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieOne"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="gen_result.json"
        app:lottie_loop="true"
        />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/imgTryResult"
        />


</androidx.constraintlayout.widget.ConstraintLayout>